Routing, favicon, and sidemenu background.
- Ensure _redirects copied to dist for Render route handling
- Add cache-busted favicon and preload for icons
- Move sidemenu background to /public/images/ and preload for mobile

--- a/frontend/Techflow/index.html
+++ b/frontend/Techflow/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="icon" href="/icon.svg?v=2" type="image/svg+xml" />
     <link rel="alternate icon" href="/icon.svg" />
     <link rel="shortcut icon" type="image/svg+xml" href="/icon.svg" />
     <link rel="apple-touch-icon" href="/icon.svg" />
@@ -19,6 +20,7 @@
 
     <!-- Preload background images -->
     <link rel="preload" as="image" href="/icon.svg" />
+    <link rel="preload" as="image" href="/images/bg-sidemenu-image.png" />
     
     <title>Techflow</title>
   </head>
