Icons and add render.yaml configuration.

--- a/frontend/Techflow/index.html
+++ b/frontend/Techflow/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <link rel="icon" href="/icon.svg?v=2" type="image/svg+xml" />
-    <link rel="alternate icon" href="/icon.svg" />
-    <link rel="shortcut icon" type="image/svg+xml" href="/icon.svg" />
-    <link rel="apple-touch-icon" href="/icon.svg" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon.png" />
     <meta name="theme-color" content="#30b5b2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
     
@@ -20,7 +18,7 @@
 
     <!-- Preload background images -->
     <link rel="preload" as="image" href="/icon.svg" />
-    <link rel="preload" as="image" href="/images/bg-sidemenu-image.png" />
+    <link rel="preload" as="image" href="/bg-sidemenu-image.png" />
     
     <title>Techflow</title>
   </head>
