Improve dropdown UX and change selection UI.
- Add service worker for cache management and PWA support
- Implement click-outside detection for all dropdowns to auto-close
- Replace checkboxes with circular indicators in selection modals
- Make entire rows clickable in user/supply selection components
- Add selection count displays to modal footers

--- a/frontend/Techflow/index.html
+++ b/frontend/Techflow/index.html
@@ -30,8 +30,7 @@
     <!-- Prevent timeout on slow connections -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- Preload critical images -->
-    <link rel="preload" as="image" href="/favicon-96x96.png" />
+    <!-- Preload critical image -->
     <link rel="preload" as="image" href="/bg-sidemenu-image.png" />
     
     <title>Techflow</title>
